# dioxus-fullstack-template-ws

./: .gitignore  Cargo.toml  Dockerfile  README.md
examples/test_connection/: Cargo.toml
examples/test_connection/src/: main.rs
mssql/: _20251204_create_template_db.sql
mssql/01_table/: 01-20251204_userinfo.sql
surrealdb/: _20251204_create_ns_db_template.surql
