[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
    "packages/db",

    # Examples
    # "examples/test_connection",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
anyhow = { version = "1.0.100" }
tokio = { version = "1.48.0", features = ["sync"] }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
db = { path = "packages/db" }
